# actix-ws-chat

./: .gitignore  Cargo.toml  test.cmake
src/: handler.rs  main.rs  server.rs
static/: index.html
