[package]
name = "actix-ws-chat-actorless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.3"
actix-ws = "0.2.5"
awc = "3"

derive_more = "0.99.17"
env_logger = "0.10.0"
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
tokio = { version = "1.29.1", features = ["rt", "time", "macros"] }
